--- a/views/sports.hbs
+++ b/views/sports.hbs
@@ -1,6 +1,3 @@
-<h2>Tous les sports</h2>
-
-<div>
     <style type="text/css">
 .tftable {font-size:12px;color:#333333;width:100%;border-width: 1px;border-color: #a9a9a9;border-collapse: collapse;}
 .tftable th {font-size:12px;background-color:#b8b8b8;border-width: 1px;padding: 8px;border-style: solid;border-color: #a9a9a9;text-align:left;}
@@ -8,15 +5,35 @@
 .tftable td {font-size:12px;border-width: 1px;padding: 8px;border-style: solid;border-color: #a9a9a9;}
 .tftable tr:hover {background-color:#ffff99;}
 </style>
+<h1>Liste des sports</h1>
 
 <table class="tftable" border="1">
-<tr><th>Sports</th><th>Athletes</th></tr>
-{{#each sports}}
-<tr><td>{{name}}</td><td>{{athletes.length()}}</td></tr>
-{{/each}}
-</table>
 
+<thead>
+    <tr>
+        <th>Sports</th>
+        <th>Athletes</th>
+    </tr>
+</thead>
+<tbody>
+    {{#each sports}}
+        <tr>
+            <td>{{name}}</td>
+            <td>{{athletes.length()}}</td>
+        </tr>
+    {{/each}}
+</tbody>
 
+</table> 
+</div>
 
-
+<h2>Ajout d'un nouveau sport</h2>
+<div class="container-fluid">
+    <form method="post" action="/sports">
+        <div class="form-group">
+            <label for="name">Nom</label>
+            <input name="name" type="text" class="form-control" id="name">
+        </div>
+        <button type="submit" class="btn btn-primary">Ajout</button>
+    </form>
 </div>
