Ajout de lien entre les différentes pages côté front

--- a/views/athlete.hbs
+++ b/views/athlete.hbs
@@ -1,6 +1,5 @@
-<a href="/athletes/new">Ajout d'un athlète</a>
-<h1>Liste des athlètes</h1>
-    <table>
+<h1>Liste des athlètes <a href="/athletes/new">+</a></h1><br>
+    <table class="table">
         <thead>
             <tr>
                 <th>Nom</th>
@@ -20,5 +19,6 @@
             {{/each}}
         </tbody>
     </table>
- 
+<div style="margin-top: 20px">
+    <a href="/sports"><h2>Voir la liste des sports</h2></a>
 </div>
