--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    {{{body}}}
+    <div class="container" style="margin-top: 30px">
+        {{{body}}}
+    </div>
 </body>
 
 </html>
