--- a/views/athlete.hbs
+++ b/views/athlete.hbs
@@ -6,6 +6,7 @@
                 <th>Prénom</th>
                 <th>Genre</th>
                 <th>Pays</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -15,6 +16,7 @@
                     <td>{{lastName}}</td>
                     <td>{{gender}}</td>
                     <td>{{country}}</td>
+                    <td><a href="/sports/add">Ajout dans un sport</a></td>
                 </tr>
             {{/each}}
         </tbody>
