Enlève une fonctionnalité

--- a/views/athlete.hbs
+++ b/views/athlete.hbs
@@ -16,8 +16,7 @@
                     <td>{{lastName}}</td>
                     <td>{{gender}}</td>
                     <td>{{country}}</td>
-                    <td><a class="btn btn-primary" href="/sports/add">Ajout dans un sport</a>
-                    <a class="btn btn-primary" href="/athletes/{{id}}/sports">Voir les sports</a></td>
+                    <td><a class="btn btn-primary" href="/athletes/{{id}}/sports">Voir les sports</a></td>
                 </tr>
             {{/each}}
         </tbody>
