--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,7 +25,15 @@
 </nav>
 <body>
     <div class="container" style="margin-top: 30px">
+      {{#if messageErreur}}
+        <div class="alert alert-danger" role="alert">{{messageErreur}}</div>
+      {{/if}}
+       {{#if messageOk}}
+        <div class="alert alert-success" role="alert">{{messageOk}}</div>
+      {{/if}}
+      <div style="margin-top: 20px">
         {{{body}}}
+      </div>
     </div>
 </body>
 
