Ajout fonctionnalité suppression d'un athlète

--- a/views/athlete.hbs
+++ b/views/athlete.hbs
@@ -16,7 +16,8 @@
                     <td>{{lastName}}</td>
                     <td>{{gender}}</td>
                     <td>{{country}}</td>
-                    <td><a class="btn btn-primary" href="/athletes/{{id}}/sports">Voir les sports</a></td>
+                    <td><a class="btn btn-primary" href="/athletes/{{id}}/sports">Voir les sports</a>
+                    <a style="margin-left: 15px;" class="btn btn-primary" href="/athletes/supprimer/{{id}}">Supprimer</a></td>
                 </tr>
             {{/each}}
         </tbody>
