Ajout de la fonctionnalité de suppression d'un sport

--- a/views/sport.hbs
+++ b/views/sport.hbs
@@ -12,7 +12,8 @@
                 <td>{{name}}</td>
                 <td>
                     <a href="/sports/{{id}}/athletes" class="btn btn-primary">Voir athlètes</a>
-                    <a href="/sports/{{id}}/addAthlete" class="btn btn-primary">Ajouter un athlète</a>
+                    <a style="margin-left: 15px;" href="/sports/{{id}}/addAthlete" class="btn btn-primary">Ajouter un athlète</a>
+                     <a style="margin-left: 15px;" class="btn btn-primary" href="/sports/supprimer/{{id}}">Supprimer</a>
                 </td>
             </tr>
         {{/each}}
