Ajout fonctionnalité suppression d'un athlète dans un sport sans le supprimer totalement

--- a/views/athlete-from-sport.hbs
+++ b/views/athlete-from-sport.hbs
@@ -1,4 +1,4 @@
-<h1>Liste des athlètes du sport sélectionné</h1><br>
+<h1>Liste des athlètes de {{sport.name}}</h1><br>
 {{#if listeAthletes}}
 <table class="table">
     <thead>
@@ -7,6 +7,7 @@
             <th>Prénom</th>
             <th>Genre</th>
             <th>Pays</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
@@ -16,6 +17,7 @@
                 <td>{{lastName}}</td>
                 <td>{{gender}}</td>
                 <td>{{country}}</td>
+                <td><a class="btn btn-primary" href="/athletes/{{id}}/sport/{{../sport.id}}">Supprimer</a></td>
             </tr>
         {{/each}}
     </tbody>
