Refacto pour plus de cohérence + ajout du README.md

--- a/views/athlete-from-sport.hbs
+++ b/views/athlete-from-sport.hbs
@@ -17,7 +17,7 @@
                 <td>{{lastName}}</td>
                 <td>{{gender}}</td>
                 <td>{{country}}</td>
-                <td><a class="btn btn-primary" href="/athletes/{{id}}/sport/{{../sport.id}}">Supprimer</a></td>
+                <td><a class="btn btn-primary" href="/api/athletes/{{id}}/sport/{{../sport.id}}">Supprimer</a></td>
             </tr>
         {{/each}}
     </tbody>
