--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,10 +15,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/sports">Liste sports</a>
+        <a class="nav-link" href="/api/sports">Liste sports</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/athletes">Liste athlètes</a>
+        <a class="nav-link" href="/api/athletes">Liste athlètes</a>
       </li>
     </ul>
   </div>
