--- a/views/nouveau-sport.hbs
+++ b/views/nouveau-sport.hbs
@@ -1,6 +1,6 @@
 <h2>Ajout d'un nouveau sport</h2>
     <div class="container-fluid">
-        <form method="post" action="/sports">
+        <form method="post" action="/api/sports">
             <div class="form-group">
                 <label for="name">Nom</label>
                 <input name="name" type="text" class="form-control" id="name">
