--- a/views/nouvel-athlete.hbs
+++ b/views/nouvel-athlete.hbs
@@ -1,6 +1,6 @@
 <h2>Inscription d'un nouvel athlète</h2>
 <div class="container-fluid">
-    <form method="post" action="/athletes">
+    <form method="post" action="/api/athletes">
         <div class="form-group">
             <label for="firstName">Nom</label>
             <input name="firstName" type="text" class="form-control" id="firstName">
@@ -18,6 +18,6 @@
             <input name="country" type="text" class="form-control" id="country">
         </div>
         <button type="submit" class="btn btn-primary">Valider l'inscription</button>
-        <a href="/athletes" class="btn btn-cancel">Retour</a>
+        <a href="/api/athletes" class="btn btn-cancel">Retour</a>
     </form>
 </div>
