--- a/views/nouvel-athlete-sport.hbs
+++ b/views/nouvel-athlete-sport.hbs
@@ -1,7 +1,7 @@
 {{#with sport}}
 <h2>Inscription d'un nouvel athlète dans {{name}}</h2>
 <div class="container-fluid" style="margin-bottom: 50px;">
-    <form method="post" action="/sport/{{id}}/athlete">
+    <form method="post" action="/api/sports/{{id}}/athlete">
         <div class="form-group">
             <label for="firstName">Nom</label>
             <input name="firstName" type="text" class="form-control" id="firstName">
@@ -19,16 +19,16 @@
             <input name="country" type="text" class="form-control" id="country">
         </div>
         <button type="submit" class="btn btn-primary">Valider l'inscription</button>
-        <a href="/sports" class="btn btn-cancel">Retour</a>
+        <a href="/api/sports" class="btn btn-cancel">Retour</a>
     </form>
 </div>
 <h2 style="margin-bottom: 30px;">Ajout d'un athlète déjà existant dans {{name}}</h2>
-<form method="post" action="/sports/{{id}}/addAthletes">{{/with}}
+<form method="post" action="/api/sports/{{id}}/addAthlete">{{/with}}
   <select name="athlete" id="athlete" style="width: 300px; margin-bottom: 30px;">
     {{#each listeAthletes}}
         <option value={{id}}>{{lastName}} {{firstName}}</option>
     {{/each}}
   </select><br>
    <button type="submit" class="btn btn-primary">Valider l'inscription</button>
-<a href="/sports" class="btn btn-cancel">Retour</a>
+<a href="/api/sports" class="btn btn-cancel">Retour</a>
 </form>
