--- a/views/nouvel-athlete-sport.hbs
+++ b/views/nouvel-athlete-sport.hbs
@@ -12,7 +12,10 @@
         </div>
         <div class="form-group">
             <label for="gender">Genre</label>
-            <input name="gender" type="text" class="form-control" id="gender">
+             <select name="gender" id="gender" class="form-control" id="exampleFormControlSelect2">
+                <option value="M">Homme</option>
+                <option value="F">Femme</option>
+            </select>
         </div>
            <div class="form-group">
             <label for="country">Pays</label>
